--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,17 @@
+version: 2.1
 
+jobs:
+  build:
+    docker:
+      - image: 'circleci/openjdk:11-jdk'
+    steps:
+      - checkout
+      - run:
+          name: Analyze on SonarCloud
+          command: mvn verify sonar:sonar -Dsonar.projectKey=akremzit_te -Dsonar.organization=akremzit -Dsonar.host.url=https://sonarcloud.io
+
+workflows:
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
